--- a/index.html
+++ b/index.html
@@ -27,11 +27,32 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <p>
-      Order Summary You can now listen to millions of songs, audiobooks, and
-      podcasts on any device anywhere you like! Annual Plan $59.99/year Change
-      Proceed to Payment Cancel Order
-    </p>
+    <div class="card">
+      <div class="image-container">
+        <img src="./images/illustration-hero.svg" alt="" class="card-img" />
+      </div>
+      <div class="card-body">
+        <h1 class="card-title">Order Summary</h1>
+        <p class="card-text">
+          You can now listen to millions of songs, audiobooks, and podcasts on
+          any device anywhere you like!
+        </p>
+        <div class="order-description">
+          <img src="./images/icon-music.svg" alt="" class="order-img" />
+          <div>
+            <div class="plan-text">Annual Plan</div>
+            <div class="cost">$59.99/year</div>
+          </div>
+          <div class="change-link"><a href="#" class="link">Change</a></div>
+        </div>
+        <div class="button-control">
+          <button class="btn proceed-btn">Proceed to Payment</button>
+        </div>
+        <div class="button-control">
+          <button class="btn cancel-btn">Cancel Order</button>
+        </div>
+      </div>
+    </div>
 
     <div class="attribution">
       Challenge by
